Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23183

Infinite loop on page_validate() on corrupted page

    XMLWordPrintable

Details

    Description

      MDEV-22721 inadvertently introduced an infinite loop to the function page_validate() for any code path that executes goto func_exit2. A necessary return statement was effectively deleted when the code was moved.

      This would cause an infinite loop in the server when it encounters a corrupted page.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75h
                  0.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.