MDEV-23183 Infinite loop on page_validate() on corrupted page

MDEV-22721 (commit eba2d10ac53d1d2f975027ba2b2ca39d9c9b98ad)
inadvertently introduced an infinite loop.

page_validate(): Remove the infinite loop.